--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     // Coroutine & Flow
-    implementation "org.jetbrains.kotlinx:kotlinx=coroutines-core:1.3.3"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
 }
